--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="script.js"></script>
     <title>Rock Paper Scissors</title>
 </head>
 <body>
+    <div class="buttons">
+        <button class="rock">Rock</button>
+        <button class="paper">Paper</button>
+        <button class="scissors">Scissors</button>
+    </div>
 
+    <div class="results"></div>
+    <div class="score"></div>
+    <div class="winner"></div>
+
+    <script src="script.js"></script>
 </body>
 </html>
